[package]
name = "DTSE"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = {version="0.49.1",features=["lazy", "strings", "regex","csv","polars-ops"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3        # Max optimization level
debug = false        # No debug info
strip = true         # Strip debug symbols from the binary